bug fix 1) in the ocr file not downloading in the initial state 2) in the history page the both option containers not overflowing on small containers and making difficult to select some of the options.

--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -398,5 +398,7 @@
   color: var(--color);
   background-color: transparent;
 }
-
+.content-bar{
+  overflow: visible !important;
+}
 
